--- a/docs/sims/template/00-template.html
+++ b/docs/sims/template/00-template.html
@@ -18,6 +18,6 @@
     canvas.parent('canvas-container');
     -->
     <div id="canvas-container"></div>
-    <a href="./">Back to Bouncing Ball Lesson Plan</a>
+    <a href="./">Back to Lesson Plan</a>
 </body>
 </html>
