--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -6,3 +6,16 @@
     height: 50px;
     width: 150px;
 }
+
+/* Container to control the iframe size and scaling */
+.iframe-container {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+
+  /* Iframe styles */
+  iframe {
+    width: 100%;
+    border: solid 1px silver;
+  }
