--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -7,15 +7,17 @@
     width: 150px;
 }
 
-/* Container to control the iframe size and scaling */
-.iframe-container {
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-  }
+iframe {
+  width: 100%; /* Fill the width of the parent container */
+  border: 2px solid blue; /* Optional border for visual separation */
+}
 
-  /* Iframe styles */
-  iframe {
-    width: 100%;
-    border: solid 1px silver;
-  }
+/* for microsims */
+#p5-container {
+  width: 100%; /* Adjust to the iframe's size */
+  display: flex; /* Centers the canvas */
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+  
