--- a/docs/sims/template/00-template-local.html
+++ b/docs/sims/template/00-template-local.html
@@ -20,7 +20,7 @@
       const canvas = createCanvas(400, 400);
       canvas.parent('canvas-container');
       -->
-      <div id="canvas-container"></div>
+      <main></main>
       <a href="./">Back to Bouncing Ball Lesson Plan</a>
   </body>
 
