--- a/docs/sims/template/template.html
+++ b/docs/sims/template/template.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>p5.js Demo</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <title>p5.js Demo 1.11.1</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
