--- a/docs/sims/template/template.html
+++ b/docs/sims/template/template.html
@@ -8,9 +8,12 @@
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
+        main {
+            height: 400px;
+        }
     </style>
     <!-- Put your script file name here -->
-    <script src="myScript.js"></script>
+    <script src="sketch.js"></script>
 </head>
 <body>
     <!-- Put the following lines in your setup() function
