--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -10,6 +10,10 @@
 iframe {
   width: 100%; /* Fill the width of the parent container */
   border: 2px solid blue; /* Optional border for visual separation */
+  display: flex; /* Centers the canvas */
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; /* Disable scrollbars - may not work so use scrolling="no" in iframe */
 }
 
 /* for microsims */
