--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -19,3 +19,9 @@
     width: 100%;
     border: solid 1px silver;
   }
+
+  /* if a div with <div class="upper-alpha"> wraps a list, then number A.B.C.D etc */
+  /* this requires that the markdown extension md_in_html is enabled in the mkdocs.yml file */
+  .upper-alpha ol {
+    list-style-type: upper-alpha;
+  }
