--- a/docs/sims/template/main.html
+++ b/docs/sims/template/main.html
@@ -10,7 +10,7 @@
         }
     </style>
     <!-- Put your script file name here -->
-    <script src="myScript.js"></script>
+    <script src="sketch.js"></script>
 </head>
 <body>
     <!-- Put the following lines in your setup() function
