--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -24,8 +24,31 @@ iframe {
   text-align: center; /* Center the iframe */
 }
 
-  /* Iframe styles */
-  iframe {
-    width: 100%;
-    border: solid 1px silver;
-  }
+/* Iframe styles */
+iframe {
+  width: 100%;
+  border: solid 1px silver;
+}
+
+
+/* Styling for the Copy Button */
+.admonition.prompt {
+  position: relative;
+}
+
+.admonition.prompt .copy-button {
+  position: absolute;
+  top: 4px;
+  right: 6px;
+  background-color: #0056d6;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 0.3rem 0.3rem;
+  cursor: pointer;
+  font-size: 0.7rem;
+}
+
+.admonition.prompt .copy-button:hover {
+  background-color: #0041a4; /* Darker blue on hover */
+}
