--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -16,7 +16,10 @@ iframe {
   overflow: hidden; /* Disable scrollbars - may not work so use scrolling="no" in iframe */
 }
 
-/* Container to control the iframe size and scaling */
+/* Container to control the iframe size and scaling 
+Make the container responsive and center the iframe
+within the container
+*/
 .iframe-container {
   width: 100%;
   position: relative;
@@ -24,7 +27,9 @@ iframe {
   text-align: center; /* Center the iframe */
 }
 
-/* Iframe styles */
+/* Iframe styles
+Make the iframe responsive and fill the container
+*/
 iframe {
   width: 100%;
   border: solid 1px silver;
