--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -27,6 +27,12 @@ within the container
   text-align: center; /* Center the iframe */
 }
 
+/* if a div with <div class="upper-alpha"> wraps a list, then number A.B.C.D etc */
+  /* this requires that the markdown extension md_in_html is enabled in the mkdocs.yml file */
+.upper-alpha ol {
+    list-style-type: upper-alpha;
+}
+
 /* Styling for the Copy Button */
 .admonition.prompt {
   position: relative;
